reparado error hovers

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                 <textarea readonly="true" class= "campoTexto" name="encriptado" id="cripted" cols="20" rows="14º "></textarea>
             </div>
             
-            <div class="btnCopy copy2">
-                <div class="cp-sup">
-                    <div class="cp-ppal"></div>
+            <div class="btnCopy copy2" aria-label="Copiar texto">
+                <div class="cp-sup" aria-label="Copiar texto">
+                    <div class="cp-ppal" aria-label="Copiar texto"></div>
                     <div class="cp-pantalla" aria-label="Copiar texto"></div>
                 </div>
                 
-                <div class="cp-inf"></div>
+                <div class="cp-inf"></div aria-label="Copiar texto">
             </div>
 
         </div>
