Reformas finales a los botones de compartir

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
 <body>
     <section id="sector1" class="texto1">
-        <h3>Texto original</h3>
+        <h3>Original</h3>
         <div id="tex1">
             <textarea class= "campoTexto" name="desencriptado" id="decripted" cols="30" rows="10" placeholder="Ingrese el Texto.."></textarea>
         </div>
@@ -49,7 +49,7 @@
     
 
     <div id="sector3" class="texto2">
-        <h3>Texto traducido</h3>
+        <h3>Traducido</h3>
         <div id="tex2">
             <textarea readonly="true" class= "campoTexto" name="encriptado" id="cripted" cols="20" rows="14"></textarea>
             <img src="image/security-7981206_1280.png" alt="Imagen de Candado" id="imagenEntrada" class="imagen_inicial">
@@ -81,12 +81,6 @@
         </button>
         <button class="icon"><img class="shareT2" src="image/compartir_con_telegram.png" width="29" height="29"/></button>
 
-        <!--     https://web.whatsapp.com/send/?text=texto_codificado -->
-        <!-- <a href="https://api.whatsapp.com/send?text=texto_codificado" class="icon .shareW"> -->
-        <!--    "https://telegram.me/share/url?url=https://alura-crypter-challenge.netlify.app/&text=Compartir con Telegram" -->
-        <!-- <a href="tg:msg_url?url=https://alura-crypter-challenge.netlify.app/&text=Compartir con Telegram"> -->
-
-            
     </div>
     <script src="js/aluraJs.js"></script>
 </body>
