Brillo al footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </path>
             </svg>
         </span>
-        <h1>Alura Crypter Challenge</h1>
+        <h1>Alura Coder Challenge</h1>
 
     </header>
 
@@ -87,8 +87,8 @@
 
 
     <footer>
-        <div>
-            <h4>Caserez Mauro para Alura Latam</h4>
+        <div class="brillo1">
+            <h4 class="brillo">Cáserez Mauro para Oracle Next Education - Alura Latam<span></span></h4>
             <section>
                 <a href="https://github.com/maurocas88/" class="icon .shareT">
                     <svg aria-hidden="false" aria-label="Ver Github" focusable="true" role="img" class="github" viewBox="0 0 16 16" width="25" height="25" fill="#000000" >
@@ -109,6 +109,7 @@
                     </svg>
                 </a> -->
             </section>
+            <span class="spani"></span>
         </div>
         </footer>
 </body>
